fix: make link more visible

--- a/src/scss/buttonAction.scss
+++ b/src/scss/buttonAction.scss
@@ -47,7 +47,7 @@
     }
 
     &--link {
-      color: $color-primary-lighter;
+      color: $color-primary;
 
       &:hover {
         color: $color-primary-darker;
